frontend/src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .p-safe {
        /* min-height: calc(100% + env(safe-area-inset-top)); */
        padding-top: env(safe-area-inset-top) 
        /* env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); */
    }
}


html {
    /* min-height: calc(100% + env(safe-area-inset-top));*/
    padding-top: env(safe-area-inset-top);
    padding-right: env(safe-area-inset-right) ;
    /* padding-bottom: env(safe-area-inset-bottom); */
    padding-left: env(safe-area-inset-left); 
}

